# haller

./: README.md  meson.build
01_processes/: meson.build
01_processes/src/: aba.cpp
02_threads/: meson.build
02_threads/include/: car.h
02_threads/src/: car.cpp  contest.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: loadsim.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h  semaphore.h  semaphoreOwn.h
05_sync3/src/: dining.cpp  philosopher.cpp  semaphore.cpp  semaphoreOwn.cpp
06_futures/: meson.build  meson_options.txt
06_futures/src/: factoring.cpp
07_berkley/: meson.build  meson_options.txt
07_berkley/include/: clock.h  pipe.h  timeslave.h  timeutils.h
07_berkley/src/: clock.cpp  main.cpp  timeslave.cpp
08_daytime/: meson.build  meson_options.txt
08_daytime/include/: timeutils.h
08_daytime/src/daytime_client/: main.cpp
08_daytime/src/daytime_server/: main.cpp
src/: aba.cpp  charout.cpp
